 2011-08-09 11:29  dimitr 
   M src/jrd/TempSpace.cpp
   M src/jrd/TempSpace.h
Second part of CORE-3457: Optimize the temporary space manager regarding small chunk allocations.

 2011-08-08 07:06  alexpeshkoff 
   M src/common/classes/alloc.cpp
Removed debugging code, related with CORE-3560 - thanks to Claudio

 2011-08-06 07:24  dimitr 
   M doc/WhatsNew
Updated docs.

 2011-08-04 13:13  alexpeshkoff 
   M src/common/classes/alloc.cpp
   M src/common/classes/alloc.h
   M src/dsql/keywords.cpp
   M src/dsql/parse.y
   M src/jrd/cmp.cpp
   M src/jrd/dfw.epp
   M src/jrd/gds.cpp
   M src/jrd/jrd.cpp
   M src/jrd/met.epp
   M src/jrd/met_proto.h
   M src/jrd/par.cpp
   M src/jrd/par_proto.h
   M src/jrd/pcmet.epp
Fixed CORE-3560: Firebird 2.5 Classic Server uses more memory than 2.1.5 when caching metadata

 2011-08-04 05:33  dimitr 
   M doc/WhatsNew
Updated docs.

 2011-07-24 06:57  robocop 
   M src/jrd/cvt2.cpp
Misc.

 2011-07-22 08:17  dimitr 
   M src/jrd/btr.cpp
   M src/jrd/btr.h
   M src/jrd/dfw.epp
   M src/jrd/ini.epp
   M src/jrd/ods.h
   M src/jrd/pcmet.epp
Backported CORE-2709: Many indexed reads in a compound index with NULLs. Backward compatibility with existing indices is provided.

 2011-07-22 06:52  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
Correction. The process name is already converted into UTF8 at this point.

 2011-07-21 10:19  dimitr 
   M src/jrd/btr.cpp
Relaxed the rules a bit thus moving some checks to runtime. This fixes the regression in CORE-1812.

 2011-07-20 10:35  dimitr 
   M src/jrd/cvt2.cpp
   M src/jrd/cvt2_proto.h
   M src/jrd/opt.cpp
Attempted to have a [more or less] good solution for CORE-3553 (Nested loop plan is chosen instead of the sort merge for joining independent streams using keys of different types). It doesn't optimize all possible cases, but the most common ones.

 2011-07-17 09:38  hvlad 
   M src/jrd/dfw.epp